Bug 1540995 - Ignore disabled labeled controls r=smaug

This patch intentionally does not ignore all click events on <input>
as web compatibility requires <input type="checkbox"> and
<input type="radio"> to mutate from `dispatchEvent()`.

Depends on D87022

Differential Revision: https://phabricator.services.mozilla.com/D87148