dom/html/HTMLLabelElement.cpp
@@ -87,92 +87,94 @@ nsresult HTMLLabelElement::PostHandleEvent(EventChainPostVisitor& aVisitor) {
   // Strong ref because event dispatch is going to happen.
   RefPtr<Element> content = GetLabeledElement();
 
-  if (content) {
-    mHandlingEvent = true;
-    switch (aVisitor.mEvent->mMessage) {
-      case eMouseDown:
-        if (mouseEvent->mButton == MouseButton::ePrimary) {
-          // We reset the mouse-down point on every event because there is
-          // no guarantee we will reach the eMouseClick code below.
-          LayoutDeviceIntPoint* curPoint =
-              new LayoutDeviceIntPoint(mouseEvent->mRefPoint);
-          SetProperty(nsGkAtoms::labelMouseDownPtProperty,
-                      static_cast<void*>(curPoint),
-                      nsINode::DeleteProperty<LayoutDeviceIntPoint>);
-        }
-        break;
-
-      case eMouseClick:
-        if (mouseEvent->IsLeftClickEvent()) {
-          LayoutDeviceIntPoint* mouseDownPoint =
-              static_cast<LayoutDeviceIntPoint*>(
-                  GetProperty(nsGkAtoms::labelMouseDownPtProperty));
-
-          bool dragSelect = false;
-          if (mouseDownPoint) {
-            LayoutDeviceIntPoint dragDistance = *mouseDownPoint;
-            RemoveProperty(nsGkAtoms::labelMouseDownPtProperty);
-
-            dragDistance -= mouseEvent->mRefPoint;
-            const int CLICK_DISTANCE = 2;
-            dragSelect = dragDistance.x > CLICK_DISTANCE ||
-                         dragDistance.x < -CLICK_DISTANCE ||
-                         dragDistance.y > CLICK_DISTANCE ||
-                         dragDistance.y < -CLICK_DISTANCE;
-          }
-          // Don't click the for-content if we did drag-select text or if we
-          // have a kbd modifier (which adjusts a selection).
-          if (dragSelect || mouseEvent->IsShift() || mouseEvent->IsControl() ||
-              mouseEvent->IsAlt() || mouseEvent->IsMeta()) {
-            break;
-          }
-          // Only set focus on the first click of multiple clicks to prevent
-          // to prevent immediate de-focus.
-          if (mouseEvent->mClickCount <= 1) {
-            if (nsFocusManager* fm = nsFocusManager::GetFocusManager()) {
-              // Use FLAG_BYMOVEFOCUS here so that the label is scrolled to.
-              // Also, within HTMLInputElement::PostHandleEvent, inputs will
-              // be selected only when focused via a key or when the navigation
-              // flag is used and we want to select the text on label clicks as
-              // well.
-              // If the label has been clicked by the user, we also want to
-              // pass FLAG_BYMOUSE so that we get correct focus ring behavior,
-              // but we don't want to pass FLAG_BYMOUSE if this click event was
-              // caused by the user pressing an accesskey.
-              bool byMouse = (mouseEvent->mInputSource !=
-                              MouseEvent_Binding::MOZ_SOURCE_KEYBOARD);
-              bool byTouch = (mouseEvent->mInputSource ==
-                              MouseEvent_Binding::MOZ_SOURCE_TOUCH);
-              fm->SetFocus(content,
-                           nsIFocusManager::FLAG_BYMOVEFOCUS |
-                               (byMouse ? nsIFocusManager::FLAG_BYMOUSE : 0) |
-                               (byTouch ? nsIFocusManager::FLAG_BYTOUCH : 0));
-            }
-          }
-          // Dispatch a new click event to |content|
-          //    (For compatibility with IE, we do only left click.  If
-          //    we wanted to interpret the HTML spec very narrowly, we
-          //    would do nothing.  If we wanted to do something
-          //    sensible, we might send more events through like
-          //    this.)  See bug 7554, bug 49897, and bug 96813.
-          nsEventStatus status = aVisitor.mEventStatus;
-          // Ok to use aVisitor.mEvent as parameter because DispatchClickEvent
-          // will actually create a new event.
-          EventFlags eventFlags;
-          eventFlags.mMultipleActionsPrevented = true;
-          DispatchClickEvent(MOZ_KnownLive(aVisitor.mPresContext), mouseEvent,
-                             content, false, &eventFlags, &status);
-          // Do we care about the status this returned?  I don't think we do...
-          // Don't run another <label> off of this click
-          mouseEvent->mFlags.mMultipleActionsPrevented = true;
-        }
-        break;
-
-      default:
-        break;
-    }
-    mHandlingEvent = false;
+  if (!content || content->IsDisabled()) {
+    return NS_OK;
   }
+
+  mHandlingEvent = true;
+  switch (aVisitor.mEvent->mMessage) {
+    case eMouseDown:
+      if (mouseEvent->mButton == MouseButton::ePrimary) {
+        // We reset the mouse-down point on every event because there is
+        // no guarantee we will reach the eMouseClick code below.
+        LayoutDeviceIntPoint* curPoint =
+            new LayoutDeviceIntPoint(mouseEvent->mRefPoint);
+        SetProperty(nsGkAtoms::labelMouseDownPtProperty,
+                    static_cast<void*>(curPoint),
+                    nsINode::DeleteProperty<LayoutDeviceIntPoint>);
+      }
+      break;
+
+    case eMouseClick:
+      if (mouseEvent->IsLeftClickEvent()) {
+        LayoutDeviceIntPoint* mouseDownPoint =
+            static_cast<LayoutDeviceIntPoint*>(
+                GetProperty(nsGkAtoms::labelMouseDownPtProperty));
+
+        bool dragSelect = false;
+        if (mouseDownPoint) {
+          LayoutDeviceIntPoint dragDistance = *mouseDownPoint;
+          RemoveProperty(nsGkAtoms::labelMouseDownPtProperty);
+
+          dragDistance -= mouseEvent->mRefPoint;
+          const int CLICK_DISTANCE = 2;
+          dragSelect = dragDistance.x > CLICK_DISTANCE ||
+                       dragDistance.x < -CLICK_DISTANCE ||
+                       dragDistance.y > CLICK_DISTANCE ||
+                       dragDistance.y < -CLICK_DISTANCE;
+        }
+        // Don't click the for-content if we did drag-select text or if we
+        // have a kbd modifier (which adjusts a selection).
+        if (dragSelect || mouseEvent->IsShift() || mouseEvent->IsControl() ||
+            mouseEvent->IsAlt() || mouseEvent->IsMeta()) {
+          break;
+        }
+        // Only set focus on the first click of multiple clicks to prevent
+        // to prevent immediate de-focus.
+        if (mouseEvent->mClickCount <= 1) {
+          if (nsFocusManager* fm = nsFocusManager::GetFocusManager()) {
+            // Use FLAG_BYMOVEFOCUS here so that the label is scrolled to.
+            // Also, within HTMLInputElement::PostHandleEvent, inputs will
+            // be selected only when focused via a key or when the navigation
+            // flag is used and we want to select the text on label clicks as
+            // well.
+            // If the label has been clicked by the user, we also want to
+            // pass FLAG_BYMOUSE so that we get correct focus ring behavior,
+            // but we don't want to pass FLAG_BYMOUSE if this click event was
+            // caused by the user pressing an accesskey.
+            bool byMouse = (mouseEvent->mInputSource !=
+                            MouseEvent_Binding::MOZ_SOURCE_KEYBOARD);
+            bool byTouch = (mouseEvent->mInputSource ==
+                            MouseEvent_Binding::MOZ_SOURCE_TOUCH);
+            fm->SetFocus(content,
+                         nsIFocusManager::FLAG_BYMOVEFOCUS |
+                             (byMouse ? nsIFocusManager::FLAG_BYMOUSE : 0) |
+                             (byTouch ? nsIFocusManager::FLAG_BYTOUCH : 0));
+          }
+        }
+        // Dispatch a new click event to |content|
+        //    (For compatibility with IE, we do only left click.  If
+        //    we wanted to interpret the HTML spec very narrowly, we
+        //    would do nothing.  If we wanted to do something
+        //    sensible, we might send more events through like
+        //    this.)  See bug 7554, bug 49897, and bug 96813.
+        nsEventStatus status = aVisitor.mEventStatus;
+        // Ok to use aVisitor.mEvent as parameter because DispatchClickEvent
+        // will actually create a new event.
+        EventFlags eventFlags;
+        eventFlags.mMultipleActionsPrevented = true;
+        DispatchClickEvent(MOZ_KnownLive(aVisitor.mPresContext), mouseEvent,
+                           content, false, &eventFlags, &status);
+        // Do we care about the status this returned?  I don't think we do...
+        // Don't run another <label> off of this click
+        mouseEvent->mFlags.mMultipleActionsPrevented = true;
+      }
+      break;
+
+    default:
+      break;
+  }
+  mHandlingEvent = false;
   return NS_OK;
 }
 
